--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "description": "node js test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --timeout 10000"
   },
   "author": "",
   "license": "ISC"
