--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "chai-http": "^4.4.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-method-override": "^0.0.3",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.1",
     "mocha": "^10.2.0",
