--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express-handlebars": "^7.1.2",
     "express-method-override": "^0.0.3",
     "handlebars": "^4.7.8",
+    "joi": "^17.10.0",
     "jsonwebtoken": "^9.0.1",
     "mocha": "^10.2.0",
     "mongoose": "^7.4.4",
